--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="/src/App.css" rel="stylesheet">
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body dir="rtl">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
